stylesheets/ml/misc.less
/* ... */
.mz-remove-coupon {
    margin-left: 30px;
}

.mz-link-span {
    cursor: pointer;
}

#SelectValidOption {
    .button_promotional {
        display: block;
        margin: auto;
        margin-top: 10px;
    }
}

.faceting-header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 14px;
    margin: 30px 0 10px 0;
    text-transform: uppercase;
    padding-bottom: 10px;
    line-height: 15px;
    font-weight: @regular;
}

.mz-facetingform-facet-hierarchy {

    a,
    a:hover,
    a:visited,
    a:focus {
        color: #000;
    }

    label {
        font-weight: 300;
    }
}

.mz-pagetitle.parent-heading {
    font-size: 25px;
}

.product-image-swatch-wrapper {
    a {
        color: #000;
    }
}

.mz-breadcrumbs {
    .mz-breadcrumb-current {
        color: #666;
        font-weight: normal;
    }
}


.mz-site-map {
    .single-sitemap-item-wrapper {
        div {
            >a {
                color: #989a8f;
                text-decoration: underline;

                &:visited {
                    color: #989a8f;
                }

                &:hover {
                    color: #989a8f;
                }
            }
        }
    }
}


//Secondary navigation
#ml-nav.ml-navbar-secondary {
    .container {
        padding: 0;

        .panel+.panel {
            margin-top: 0;
        }

        #accordion>.panel:first-child>.panel-heading {
            border-top: none;

            a {
                padding-top: 0;
            }
        }
    }

    .panel-body {
        border: none;
    }

    .panel-group {
        margin-bottom: 0px;
        border-bottom: 1px solid @primaryColor;

        .panel {
            .border-radius-plain(0px);
            border: none;
            box-shadow: none;

            .panel-heading {
                padding: 0;
                background: @colorWhite;
                border-top: 1px solid @primaryColor;
                border-radius: 0px;

                .panel-title {

                    a {
                        display: flex;
                        width: 100%;
                        justify-content: space-between;
                        align-items: center;
                        padding: 3px @defaultGutter;
                        font-size: 20px;
                        text-decoration: none;
                    }

                    .collapsed {
                        .glyphicon-test {
                            .icon(before, '152', solid, 27px);
                            color: @primaryColor;
                            top: 0;
                        }

                    }

                    .glyphicon-test {
                        .icon(before, '150', solid, 27px);
                        color: @primaryColor;
                        top: 0;
                    }

                    &-sub {
                        margin: 0;

                        a {
                            margin: 0;
                            padding: 8px 40px;
                            font-size: 20px;

                            display: block;
                            text-decoration: none;
                        }

                    }

                }

                .panel-title-sub-nolink {
                    margin: 0;
                    padding: 8px 40px;
                    font-size: 20px;
                    font-weight: @bold;
                    text-transform: @uppercase;
                }
            }

            .panel-group {
                border-bottom: 1px solid @ghostWhite;
            }

        }
    }

    .panel-collapse {
        .panel-body {
            padding: 0;

            .panel-container {
                .panel-heading {
                    margin: 0 7px;
                    border-top: 1px solid @ghostWhite;

                    &:last-child {
                        height: 38.8px;
                    }
                }

            }
        }

        .mz-sitenav-item {
            &+.mz-sitenav-item {
                margin-top: 12px;
            }

            .mz-sitenav-link {
                font-size: @fontSizeLarger;
                .fontRegular();
            }

        }
    }

    font {
        b {
            color: #3f3f3f;
        }
    }

    @media only screen and (min-width: 767px) {
        display: none
    }
}

.mz-shipping-destinations {
    .clearfix();

    .mz-shipping-destination-title {
        h3 {
            font-size: 18px;
        }
    }

    .mz-shipping-row {
        display: block;

        .mz-shipping-row-item {
            display: inline-block;
            padding-right: 0;
            min-width: 50px;
            white-space: nowrap;
            overflow: hidden;
            vertical-align: middle;

            .mz-shipping-row-item {
                display: inline-block;
                padding-right: 0;
            }

            label {
                .fontRegular();
                margin-bottom: 5px;
            }

            select {
                border-radius: 0;
                margin-bottom: 0;
            }
        }
    }
}

.mz-ordersummary-ms2-checkout {
    width: 100%;

    .mz-itemlisting-thumb-img {
        float: left;
        margin-right: @defaultGutter;
    }

    th {
        padding: 5px 0;

        &.mz-ordersummary-header-total {
            text-align: right;
        }
    }

    .mz-ordersummary-lineitems {
        .fontRegular();

        td {
            padding: 5px 0;
        }

        .mz-ordersummary-item-total {
            text-align: right;
        }
    }
}

.mz-carousel-arrow-customize {
    .bx-controls-direction {
        i {
            color: #989a8f;
            font-size: 40px;
            font-weight: bold;
        }

        a {
            text-indent: inherit;
            background: transparent;
            z-index: 1;
        }

        .bx-prev {
            left: 29px;
        }
    }
}
/* ... */

